# KSPA

./: CMakeLists.txt  README.md  brainstorm.md
.github/workflows/: cmake.yml
include/kspa/: kspa.h
include/kspa_core/: logging.h
include/policy_evaluator/: policy_evaluator.h
src/: CMakeLists.txt  main.cpp
src/KSPA_core/: CMakeLists.txt  logging.cpp
src/policy_evaluator/: CMakeLists.txt  policy_evaluator.cpp
src/policy_parser/: CMakeLists.txt
test/: CMakeLists.txt  rules.yml  test-rules.yml
